<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    tools:context=".auth.ui.fragments.ForgotPasswordFragment">

    <ImageView
        android:id="@+id/imageview_forgot_password_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_forgot_password" />

    <TextView
        android:id="@+id/textview_forgot_password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bebas_neue"
        android:gravity="center"
        android:text="@string/forgot_password_title"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/primary"
        android:textColorHighlight="@color/primary_100"
        android:textSize="38sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview_forgot_password_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/text"
        android:text="@string/forgot_password_description"
        android:textAlignment="gravity" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_forgot_password_email"
        style="@style/InputFieldLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinput_forgot_password_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_bold"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <ProgressBar
            android:id="@+id/progressbar_forgot_password"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_forgot_password_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:fontFamily="@font/comfortaa_bold"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:paddingBottom="15dp"
            android:text="@string/reset_password"
            android:textColor="@color/background"
            android:textStyle="bold"
            android:textSize="20sp"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_button_reset_password"
            app:iconGravity="textStart"
            app:iconTint="@color/background"
            app:iconSize="30dp"
            />

    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_forgot_password_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondary_200"
        android:fontFamily="@font/comfortaa_bold"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp"
        android:text="@string/back"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:icon="@drawable/ic_arrow_back"
        app:iconSize="30dp"
        app:iconGravity="textStart"
        app:iconTint="@color/text" />
</LinearLayout>