<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".auth.ui.fragments.SignupTabFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_signup_email"
        style="@style/InputFieldLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:expandedHintEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:startIconTint="@color/accent"
        app:startIconDrawable="@android:drawable/sym_action_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinput_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_signup_username"
        style="@style/InputFieldLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/username"
        app:counterEnabled="true"
        app:counterMaxLength="32"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:expandedHintEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:startIconTint="@color/accent"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinput_signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_signup_display_name"
        style="@style/InputFieldLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/display_name"
        app:counterEnabled="true"
        app:counterMaxLength="32"
        app:helperText="This is how others see you. You can use special characters and emoji."
        app:helperTextEnabled="false"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:expandedHintEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:startIconTint="@color/accent"
        app:startIconDrawable="@android:drawable/ic_menu_myplaces">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinput_signup_display_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputFieldLayoutStyle"
        android:id="@+id/textinputlayout_signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/password"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:startIconTint="@color/accent"
        app:passwordToggleTint="@color/accent"
        app:startIconDrawable="@android:drawable/ic_lock_idle_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinput_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputFieldLayoutStyle"
        android:id="@+id/textinputlayout_signup_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/confirm_password"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:startIconTint="@color/accent"
        app:passwordToggleTint="@color/accent"
        app:startIconDrawable="@android:drawable/ic_lock_idle_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinput_signup_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_signup"
        style="@style/PrimaryButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animation="@android:anim/fade_in"
        android:text="@string/signup" />

<!--    <TextView-->
<!--        android:id="@+id/textview_signup_terms"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginStart="15dp"-->
<!--        android:layout_marginEnd="15dp"-->
<!--        android:text="@string/terms_and_conditions"-->
<!--        android:textColor="@color/text"-->
<!--        android:textSize="12sp" />-->

</LinearLayout>