<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".auth.ui.fragments.LoginTabFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinputlayout_login_email_or_username"
        style="@style/InputFieldLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/email_or_username"
        app:counterEnabled="true"
        app:counterMaxLength="32"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:expandedHintEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:startIconTint="@color/accent"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinput_login_email_or_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputFieldLayoutStyle"
        android:id="@+id/textinputlayout_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/password"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:startIconTint="@color/accent"
        app:passwordToggleTint="@color/accent"
        app:startIconDrawable="@android:drawable/ic_lock_idle_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinput_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textview_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:text="forgot password?"
        android:textSize="16sp"
        android:textColor="@color/accent"
         />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressbar_login"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            style="@style/PrimaryButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animation="@android:anim/fade_in"
            android:text="@string/login" />

    </FrameLayout>

</LinearLayout>